Bug 243536 - Remove NS_NOTYETIMPLEMENTED from nsSVGTransformList.cpp. Patch by jonathan.watt@strath.ac.uk, r=afri.