layout/svg/base/src/nsSVGDefsFrame.cpp
@@ -379,7 +379,7 @@ nsSVGDefsFrame::GetCanvasTM()
       PRUint32 numberOfItems;
       transforms->GetNumberOfItems(&numberOfItems);
       if (numberOfItems>0)
-        transforms->GetConsolidation(getter_AddRefs(localTM));
+        transforms->GetConsolidationMatrix(getter_AddRefs(localTM));
     }
     
     if (localTM)
