layout/svg/base/src/nsSVGPathGeometryFrame.cpp
@@ -293,7 +293,7 @@ nsSVGPathGeometryFrame::GetCanvasTM(nsIDOMSVGMatrix * *aCTM)
     PRUint32 numberOfItems;
     transforms->GetNumberOfItems(&numberOfItems);
     if (numberOfItems>0)
-      transforms->GetConsolidation(getter_AddRefs(localTM));
+      transforms->GetConsolidationMatrix(getter_AddRefs(localTM));
   }  
   if (localTM) {
     return parentTM->Multiply(localTM, aCTM);
