layout/svg/base/src/nsSVGTextFrame.cpp
@@ -789,7 +789,7 @@ nsSVGTextFrame::GetCanvasTM()
       PRUint32 numberOfItems;
       transforms->GetNumberOfItems(&numberOfItems);
       if (numberOfItems>0)
-        transforms->GetConsolidation(getter_AddRefs(localTM));
+        transforms->GetConsolidationMatrix(getter_AddRefs(localTM));
     }
     
     if (localTM)
